@@ -11,11 +11,17 @@ package com.str;
 
 public class Pack {
     public static void main(String[] args) {
-        int n = 8;
-        Integer n1 = new Integer(n);
-        System.out.println("int类型转换为integer类："+n1);
-        Integer i = new Integer(50);
-        int i1 = i.intValue();
-        System.out.println("integer类型装换为int类型：" +i1);
+//        int n = 8;
+//        Integer n1 = new Integer(n);
+
+        Integer n2 = 9;
+//        Integer n9 = Integer.valueOf(9);
+        System.out.println("int类型转换为integer类："+n2); // 装箱
+//        Integer i = new Integer(50);
+//        int i1 = i.intValue();
+
+        int i1 = 8;
+//        int i1 = n2.intValue();
+        System.out.println("integer类型装换为int类型：" +i1); // 拆箱
     }
 }
